---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "pub record Cat { Cat(name: String) }\n\npub fn return_unapplied_cat() {\n  Cat\n}\n"
---
----- SOURCE CODE
pub record Cat { Cat(name: String) }

pub fn return_unapplied_cat() {
  Cat
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../rakun.d.mts";

export class Cat extends _.CustomType {
  constructor(name: string);
  
  name: string;
}

export type Cat$ = Cat;

export function return_unapplied_cat(): (x0: string) => Cat$;
